Finish editing main activity interface

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,112 +8,176 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MyActivity"
-    android:background="@drawable/background4">
-
-
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/linearLayout1"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentRight="true"
-    android:paddingTop="30dp">
-    <Button
-        android:id="@+id/btn_goToContactSetting"
-        android:layout_width="0dp"
+    >
+    <TableLayout
         android:layout_height="wrap_content"
-        android:layout_weight=".5"
-        android:drawableTop="@drawable/ic_action_add_group"
-        android:gravity="center_vertical|center"
-        android:text="@string/contact_setting"
-        android:onClick="goToContactSetting"/>
-    <Button
-        android:id="@+id/btn_goToMyLocation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight=".5"
-        android:drawableTop="@drawable/ic_action_place"
-        android:gravity="center_vertical|center"
-        android:onClick="goToMyLocation"
-        android:text="@string/check_location"/>
-</LinearLayout>
-<LinearLayout
-    android:id="@+id/linearLayout2"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentRight="true"
-    android:layout_below="@+id/linearLayout1">
+        android:layout_width="match_parent"
+        android:layout_marginTop="40dp">
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/contact_button"
+                android:src="@drawable/contact_red"
+                android:layout_width="180dp"
+                android:layout_height="80dp"
+                android:onClick="goToContactSetting"
+                />
+            <ImageView
+                android:id="@+id/location_button"
+                android:src="@drawable/location_red"
+                android:layout_width="180dp"
+                android:layout_height="80dp"
+                android:onClick="goToMyLocation"></ImageView>
+        </TableRow>
+         <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center"
+                android:textSize="12dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/contact_setting"
+               />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center"
+                android:textSize="12dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/check_location"
+                />
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/alarm_button"
+                android:src="@drawable/alarm_red"
+                android:layout_width="180dp"
+                android:layout_height="80dp"
+                android:onClick="goToAlarmSound"
+                />
+            <ImageView
+                android:id="@+id/history_button"
+                android:src="@drawable/history_red"
+                android:layout_width="180dp"
+                android:layout_height="80dp"
+                android:onClick="goToMessageHistory"></ImageView>
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center"
+                android:textSize="12dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/alarm_sound"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center"
+                android:textSize="12dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/message_history"
+                />
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/country_button"
+                android:src="@drawable/country_red"
+                android:layout_width="180dp"
+                android:layout_height="80dp"
+                android:onClick="goToEmergencyContact"
+                />
+            <ImageView
+                android:id="@+id/setting_button"
+                android:src="@drawable/setting_red"
+                android:layout_width="180dp"
+                android:layout_height="80dp"
+                android:onClick="goToAlertSetting"></ImageView>
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center"
+                android:textSize="12dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/message_setting"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center"
+                android:textSize="12dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/alert_setting"
+                />
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/danger_button"
+                android:src="@drawable/danger_red"
+                android:layout_width="180dp"
+                android:layout_height="80dp"
+                android:onClick="goToDangerAlarm"
+                />
+            <ImageView
+                android:id="@+id/help_button"
+                android:src="@drawable/help_red"
+                android:layout_width="180dp"
+                android:layout_height="80dp"
+                android:onClick="goToHelp"></ImageView>
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center"
+                android:textSize="12dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/danger"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center"
+                android:textSize="12dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/help"
+                />
+        </TableRow>
+    </TableLayout>
 
-    <Button
-        android:id="@+id/btn_goToAlarmSound"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight=".5"
-        android:drawableTop="@drawable/ic_action_new"
-        android:gravity="center_vertical|center"
-        android:onClick="goToAlarmSound"
-        android:text="@string/alarm_sound"/>
-    <Button
-        android:id="@+id/btn_goToMessageHistory"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight=".5"
-        android:drawableTop="@drawable/ic_action_settings"
-        android:gravity="center_vertical|center"
-        android:onClick="goToMessageHistory"
-        android:text="@string/message_history"/>
 
-</LinearLayout>
 
-<LinearLayout
-    android:id="@+id/linearLayout3"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentRight="true"
-    android:layout_below="@+id/linearLayout2">
 
-    <Button
-        android:id="@+id/btn_goToMessageSetting"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight=".5"
-        android:drawableTop="@drawable/ic_action_phone"
-       android:gravity="center_vertical|center"
-        android:onClick="goToMessageSetting"
-        android:text="@string/message_setting"/>
-    <Button
-        android:id="@+id/btn_goToAlertSetting"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight=".5"
-        android:gravity="center_vertical|center"
-        android:drawableTop="@drawable/ic_action_add_alarm"
-        android:onClick="goToAlertSetting"
-        android:text="@string/alert_setting"/>
 
-</LinearLayout>
 
-<LinearLayout
-    android:id="@+id/linearLayout4"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentRight="true"
-    android:layout_below="@+id/linearLayout3">
-   <Button
-       android:id="@+id/btn_goToDanger"
-       android:layout_width="match_parent"
-       android:layout_height="50dp"
-       android:layout_marginTop="10dp"
-       android:text="@string/danger"
 
-       android:onClick="goToDangerAlarm"
-       android:background="@drawable/background3">
 
-       </Button>
-
-</LinearLayout>
 
 </RelativeLayout>
 
