--- a/app/src/main/res/layout/contact_setting.xml
+++ b/app/src/main/res/layout/contact_setting.xml
@@ -4,8 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true"
-    android:background="@drawable/background4"
-    >
+>
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -39,19 +38,26 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_below="@+id/linearLayoutContact1">
         <Button
             android:id="@+id/btn_AddManually"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".5"
+            android:layout_weight=".4"
             android:text="@string/add_manually"
-            android:onClick="showAddManuallyDialog"/>
+            android:background="@drawable/button"
+            android:textColor="#FFFFFF"
+            android:layout_marginRight="5dp"
+           android:onClick="showAddManuallyDialog"/>
         <Button
             android:id="@+id/btn_FromContact"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".5"
+            android:layout_weight=".4"
+            android:background="@drawable/button"
+            android:textColor="#FFFFFF"
             android:text="@string/from_contact"
             android:onClick="showSubContact"/>
         </LinearLayout>
