--- a/app/src/main/res/layout/add_contact_manually_dialog.xml
+++ b/app/src/main/res/layout/add_contact_manually_dialog.xml
@@ -4,6 +4,23 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="vertical">
+    <LinearLayout
+        android:id="@+id/linearButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <TextView
+            android:layout_weight="0.6"
+            android:layout_width="0dp"
+            android:text="@string/add_manually"
+            android:gravity="center"
+            android:textSize="25dp"
+            android:textColor="#FF3300"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
     <TextView
         android:text="@string/add_manually_instruction"
         android:layout_width="wrap_content"
@@ -14,7 +31,9 @@
         <TableRow>
             <TextView
                 android:text="Name:"
-                android:width="120dp"/>
+                android:width="120dp"
+                android:textColor="#FF3300"
+                android:layout_marginLeft="15dp"/>
             <EditText
                 android:id="@+id/txt_contact_name"
                 android:width="200dp"
@@ -33,7 +52,9 @@
         <TableRow>
            <TextView
                android:text="Number"
-               android:width="120dp"/>
+               android:width="120dp"
+               android:textColor="#FF3300"
+               android:layout_marginLeft="15dp"/>
             <EditText
                 android:id="@+id/txt_phone_number"
                 android:width="200dp"
@@ -52,7 +73,9 @@
         <TableRow>
             <TextView
                 android:text="Email"
-                android:width="120dp"/>
+                android:width="120dp"
+                android:textColor="#FF3300"
+                android:layout_marginLeft="15dp"/>
             <EditText
                 android:id="@+id/txt_contact_email"
                 android:width="200dp"
@@ -60,17 +83,26 @@
                 android:imeOptions="actionDone"/>
         </TableRow>
 
-    <TableRow>
+    <TableRow
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp">
         <Button
             android:id="@+id/btn_Cancel_Manually"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cancel"/>
+            android:text="Cancel"
+            android:background="@drawable/button"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
         <Button
             android:id="@+id/btn_Done"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Done"/>
+            android:text="Done"
+            android:background="@drawable/button"
+            android:textColor="#FFFFFF"
+            android:layout_marginRight="10dp"/>
 
     </TableRow>
 
