--- a/app/src/main/res/layout/help.xml
+++ b/app/src/main/res/layout/help.xml
@@ -5,6 +5,23 @@
     android:layout_gravity="center"
     android:orientation="vertical">
    >
+    <LinearLayout
+        android:id="@+id/linearButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <TextView
+            android:layout_weight="0.6"
+            android:layout_width="0dp"
+            android:text="@string/help"
+            android:gravity="center"
+            android:textSize="25dp"
+            android:textColor="#FF3300"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
     <TextView
         android:text="@string/thankyou"
         android:layout_width="wrap_content"
@@ -128,6 +145,9 @@
         android:id="@+id/btn_help_OK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OK"/>
+        android:text="OK"
+        android:background="@drawable/button"
+        android:textColor="#FFFFFF"
+        android:layout_marginBottom="20dp"/>
 
 </TableLayout>
