--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,8 +8,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/item_content"
-        android:layout_marginLeft="3dp"
-        android:textSize="12sp"/>
+        android:layout_marginLeft="10dp"
+        android:textSize="12sp"
+        android:textColor="#FF3300"
+        />
     <!--content-->
     <TextView
         android:id="@+id/item_content"
