--- a/app/src/main/res/layout/my_location.xml
+++ b/app/src/main/res/layout/my_location.xml
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/location_title"
+        android:textColor="#FF3300"
         />
 
     </LinearLayout>
@@ -48,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_weight=".1"
         android:text="@string/latitude_txt"
+        android:textColor="#FF3300"
         />
     <TextView
         android:textSize="16dp"
@@ -72,6 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".1"
                 android:text="@string/longitude_txt"
+                android:textColor="#FF3300"
                 />
             <TextView
                 android:textSize="16dp"
@@ -91,7 +94,7 @@
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:background="@android:color/black" />
+            android:background="@android:color/holo_red_light" />
 
     </LinearLayout>
 
@@ -114,7 +117,7 @@
             android:text="@string/result_title"
             android:textStyle="bold"
             android:textSize="20dp"
-
+            android:textColor="#FF3300"
             />
         <TextView
             android:paddingBottom="@dimen/activity_vertical_margin"
@@ -131,7 +134,7 @@
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:background="@android:color/black" />
+            android:background="@android:color/holo_red_light" />
 
 
     </LinearLayout>
@@ -154,7 +157,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/getMyLocation"
-            android:onClick="getCurrentLocation"/>
+            android:onClick="getCurrentLocation"
+            android:background="@drawable/button"
+            android:textColor="#FFFFFF"/>
 
 
     </LinearLayout>
