--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
                 android:gravity="center_vertical|center"
                 android:textSize="12dp"
                 android:layout_marginTop="4dp"
-                android:text="@string/message_history"
+                android:text="@string/alert_history"
                 />
         </TableRow>
         <TableRow
