--- a/app/src/main/res/layout/alert_setting.xml
+++ b/app/src/main/res/layout/alert_setting.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_gravity="center"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -58,7 +59,6 @@
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_gravity="center"
         >
     <Button
@@ -91,14 +91,23 @@
         android:background="@android:color/black" />
     <View
         android:layout_width="match_parent"
-        android:layout_height="10dp"
+        android:layout_height="50dp"
         android:background="@android:color/transparent" />
 
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_gravity="center_horizontal">
 
     <ImageView
         android:id="@+id/status_image"
+        android:background="@drawable/status_on"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_marginRight="12dp"
         android:layout_gravity="center"
     />
 
@@ -106,19 +115,42 @@
         android:id="@+id/alertStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight=".4"
+        android:layout_weight=".5"
         android:textSize="20dp"
-        android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/status_image"
         android:layout_gravity="center"/>
 
-    <Button
-        android:id="@+id/test"
-        android:layout_width="wrap_content"
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@android:color/transparent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout5"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Session"
-        android:onClick="testSession"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+            android:id="@+id/battery_image"
+            android:background="@drawable/ok_good"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginRight="12dp"
+            android:layout_gravity="center"
+            />
+        <TextView
+            android:id="@+id/batteryStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:textSize="20dp"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/status_image"
+            android:layout_gravity="center"/>
+    </LinearLayout>
 
 
 </LinearLayout>
